feat: add /github/status
