# internal/api/api.go
@@ -3,9 +3,11 @@ package api
 import (
 	"context"
 
+	"github.com/go-faster/sdk/zctx"
 	"github.com/gotd/td/telegram"
 	"github.com/gotd/td/telegram/message/peer"
 	"github.com/ogen-go/ogen/http"
+	"github.com/ogen-go/ogen/json"
 	"go.uber.org/zap"
 
 	"github.com/go-faster/bot/internal/ent"
@@ -28,6 +30,22 @@ type Server struct {
 	ht       http.Client
 	resolver peer.Resolver
 	lg       *zap.Logger
+}
+
+func (s Server) GithubStatus(ctx context.Context, req oas.GithubStatusReq, params oas.GithubStatusParams) error {
+	lg := zctx.From(ctx)
+	lg.Info("Github status key", zap.String("key", params.Secret.Value))
+	for k, v := range req {
+		var object any
+		_ = json.Unmarshal(v, &object)
+
+		lg.Debug("github status",
+			zap.String("key", k),
+			zap.Any("value", object),
+			zap.Stringer("valuer.raw", v),
+		)
+	}
+	return nil
 }
 
 func (s Server) NewError(ctx context.Context, err error) *oas.ErrorStatusCode {
